[project]
name = "comfyui-image-browsing"
description = "Image Browsing: browsing, download and delete."
version = "2.2.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/ytoaa/ComfyUI-Image-Browsing"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ytoaa"
DisplayName = "ComfyUI-Image-Browsing"
Icon = ""

#only fork project